; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_scp.c_scpio.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_scp.c_scpio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@limit_kbps = common dso_local global i64 0, align 8
@bwlimit = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @scpio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scpio(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to i64*
  store i64* %7, i64** %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64*, i64** %5, align 8
  %10 = load i64, i64* %9, align 8
  %11 = add i64 %10, %8
  store i64 %11, i64* %9, align 8
  %12 = load i64, i64* @limit_kbps, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @bandwidth_limit(i32* @bwlimit, i64 %15)
  br label %17

17:                                               ; preds = %14, %2
  ret i32 0
}

declare dso_local i32 @bandwidth_limit(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
